--- a/CookPopularControl/Themes/ToolTipStyle.xaml
+++ b/CookPopularControl/Themes/ToolTipStyle.xaml
@@ -1,20 +1,27 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached">
+                    xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached"
+                    xmlns:toolTip="clr-namespace:CookPopularControl.Controls.TooTip">
 
     <Style x:Key="DefaultToolTipStyle" TargetType="{x:Type ToolTip}">
+        <Setter Property="Foreground" Value="{DynamicResource AssistantForeground}" />
+        <Setter Property="Background" Value="{DynamicResource AssistantColorTheme}" />
         <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="BorderBrush" Value="{DynamicResource BorderBrushColor}"/>
+        <Setter Property="HasDropShadow" Value="True" />
         <Setter Property="FontSize" Value="{DynamicResource DefaultFontSize}" />
         <Setter Property="Placement" Value="Mouse" />
-        <Setter Property="Foreground" Value="{DynamicResource AssistantForeground}" />
-        <Setter Property="Background" Value="{DynamicResource PrimaryColorTheme}" />
-        <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="5" />
+        <Setter Property="Padding" Value="8" />
+        <Setter Property="CustomPopupPlacementCallback" Value="{x:Static toolTip:ToolTipAssistant.CustomPopupPlacementCallback}" />
+        <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="15" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ToolTip}">
                     <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}"
-                            CornerRadius="{TemplateBinding attached:FrameworkElementBaseAttached.CornerRadius}" Background="{TemplateBinding Background}">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5"/>
+                            CornerRadius="{TemplateBinding attached:FrameworkElementBaseAttached.CornerRadius}" 
+                            Background="{TemplateBinding Background}">
+                        <ContentPresenter x:Name="ContentPresenter" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="{TemplateBinding Padding}" Effect="{DynamicResource ComboxBoxShadow}"
+                                          Content="{TemplateBinding ContentControl.Content}" ContentTemplate="{TemplateBinding ContentControl.ContentTemplate}" ContentStringFormat="{TemplateBinding ContentControl.ContentStringFormat}"/>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
