--- a/CookPopularControl/Themes/ButtonStyle.xaml
+++ b/CookPopularControl/Themes/ButtonStyle.xaml
@@ -13,9 +13,9 @@
         <Setter Property="attached:FrameworkElementBaseAttached.IconMargin" Value="0" />
     </Style>
     <Style x:Key="OutlineButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource DefaultButtonStyle}">
-        <Setter Property="BorderBrush" Value="{StaticResource PrimaryColorTheme}" />
+        <Setter Property="BorderBrush" Value="{DynamicResource PrimaryColorTheme}" />
         <Setter Property="BorderThickness" Value="2" />
-        <Setter Property="Foreground" Value="{StaticResource PrimaryForeground}" />
+        <Setter Property="Foreground" Value="{DynamicResource PrimaryForeground}" />
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="attached:ButtonBaseAttached.ButtonBaseMouseOverBackground" Value="Transparent"/>
         <Setter Property="attached:ButtonBaseAttached.ButtonBasePressBackground" Value="Transparent"/>
@@ -28,8 +28,8 @@
     </Style>
     <Style x:Key="IconButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource DefaultButtonBaseStyle}">
         <Setter Property="attached:FrameworkElementBaseAttached.IconMargin" Value="0" />
-        <Setter Property="attached:FrameworkElementBaseAttached.IconWidth" Value="{StaticResource Double26Value}" />
-        <Setter Property="attached:FrameworkElementBaseAttached.IconHeight" Value="{StaticResource Double26Value}" />
+        <Setter Property="attached:FrameworkElementBaseAttached.IconWidth" Value="{DynamicResource Double26Value}" />
+        <Setter Property="attached:FrameworkElementBaseAttached.IconHeight" Value="{DynamicResource Double26Value}" />
     </Style>
     <Style x:Key="IconTransparentButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource IconButtonStyle}">
         <Setter Property="Background" Value="Transparent" />
@@ -40,8 +40,8 @@
 
     <Style x:Key="ContentWithGifButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource DefaultButtonBaseStyle}">
         <Setter Property="attached:FrameworkElementBaseAttached.IconGeometry" Value="{x:Null}" />
-        <Setter Property="buttonassist:ButtonAssist.ImageWidth" Value="{StaticResource Double30Value}"/>
-        <Setter Property="buttonassist:ButtonAssist.ImageHeight" Value="{StaticResource Double30Value}"/>
+        <Setter Property="buttonassist:ButtonAssist.ImageWidth" Value="{DynamicResource Double30Value}"/>
+        <Setter Property="buttonassist:ButtonAssist.ImageHeight" Value="{DynamicResource Double30Value}"/>
     </Style>
     <Style x:Key="GifButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource ContentWithGifButtonStyle}">
         <Setter Property="attached:FrameworkElementBaseAttached.IconMargin" Value="0" />
