--- a/CookPopularControl/Backcolors/DefaultPopularColor.xaml
+++ b/CookPopularControl/Backcolors/DefaultPopularColor.xaml
@@ -11,6 +11,8 @@
     <SolidColorBrush x:Key="ButtonBasePressBackground" Color="#4169E1"/>
     <SolidColorBrush x:Key="BorderBrushColor" Color="#8B008B"/>
 
+    <SolidColorBrush x:Key="FieldBorderBrush" Color="{x:Static SystemColors.ActiveBorderColor}"/>
+
     <SolidColorBrush x:Key="BlockColor" Color="#664A4A4A"/>
     <SolidColorBrush x:Key="UnEnabledColor" Color="#D3D3D3"/>
     <SolidColorBrush x:Key="DefaultBackground" Color="#FFFFFF"/>
