--- a/TestDemo/MainWindow.xaml
+++ b/TestDemo/MainWindow.xaml
@@ -20,10 +20,13 @@
         <!--<hc:WaveProgressBar Value="50" hc:WindowAttach.ShowInTaskManager="True" ShowText="True" 
                             WaveFill="Green" WaveStroke="Orange" WaveThickness="5"/>-->
         <!--<local:AnimationDemo />-->
-        <local:ButtonDemo />
+        
+        <!--<local:ButtonDemo />-->
         <!--<local:AnimationPathDemo />-->
         <!--<local:LoadingDemo />-->
         <!--<local:ProgressBarDemo />-->
+        <!--<local:CheckBoxDemo />-->
+        <local:PasswordBoxDemo />
     </Grid>
 
 
