增加密码验证功能

--- a/CookPopularControl/Themes/PasswordBoxStyle.xaml
+++ b/CookPopularControl/Themes/PasswordBoxStyle.xaml
@@ -16,11 +16,22 @@
         <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="10"/>
     </Style>
 
+    <Style x:Key="AddClearButtonPasswordBoxStyle" TargetType="{x:Type PasswordBox}" BasedOn="{StaticResource DefaultPasswordBoxStyle}">
+        <Setter Property="attached:FrameworkElementBaseAttached.IconMargin" Value="2"/>
+        <Setter Property="attached:TextElementAttached.IsAddClearButton" Value="True" />
+        <Setter Property="attached:FrameworkElementBaseAttached.IconWidth" Value="20"/>
+        <Setter Property="attached:FrameworkElementBaseAttached.IconHeight" Value="20"/>
+    </Style>
+
     <Style x:Key="VisiblePasswordBoxStyle" TargetType="{x:Type PasswordBox}" BasedOn="{StaticResource DefaultPasswordBoxStyle}">
         <Setter Property="assistant:PasswordBoxAssistant.IsShowIcon" Value="True" />
         <Setter Property="attached:FrameworkElementBaseAttached.IconWidth" Value="20"/>
         <Setter Property="attached:FrameworkElementBaseAttached.IconHeight" Value="20"/>
-        <Setter Property="attached:FrameworkElementBaseAttached.IconMargin" Value="0"/>
+        <Setter Property="attached:FrameworkElementBaseAttached.IconMargin" Value="3"/>
+    </Style>
+
+    <Style x:Key="AddClearButtonWithVisiblePasswordBoxStyle" TargetType="{x:Type PasswordBox}" BasedOn="{StaticResource VisiblePasswordBoxStyle}">
+        <Setter Property="attached:TextElementAttached.IsAddClearButton" Value="True" />
     </Style>
 
 </ResourceDictionary>
