控件获取焦点后开始显示验证结果

--- a/CookPopularControl/Themes/BaseStyle/PasswordBoxBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/PasswordBoxBaseStyle.xaml
@@ -91,10 +91,14 @@
                         <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self},Path=(assistant:PasswordBoxAssistant.Password),Converter={toolsConverters:ValueIsEmptyOrNullConverter}}" Value="False">
                             <Setter Property="Visibility" Value="Collapsed" TargetName="PART_PlaceHolder"/>
                         </DataTrigger>
-                        <Trigger Property="Validation.HasError" Value="True">
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="Validation.HasError" Value="True"/>
+                                <Condition Property="IsFocused" Value="True"/>
+                            </MultiTrigger.Conditions>
                             <Setter Property="BorderBrush" Value="{DynamicResource FieldValidationErrorBrush}" />
                             <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=BorderThickness.Left,Converter={commonConverters:DoubleToThickness},ConverterParameter=1.2}" TargetName="RootBorder"/>
-                        </Trigger>
+                        </MultiTrigger>
                         <Trigger Property="IsChecked" Value="True" SourceName="PART_Icon">
                             <Setter Property="assistant:PasswordBoxAssistant.IsShowPassword" Value="True"/>
                             <Setter Property="attached:FrameworkElementBaseAttached.IconGeometry" Value="{DynamicResource EyeGeometry}" TargetName="PART_Icon"/>
