RegularPatterns规则优化与验证

--- a/TestDemo/Demos/PasswordBoxDemo.xaml
+++ b/TestDemo/Demos/PasswordBoxDemo.xaml
@@ -25,25 +25,36 @@
                              PasswordChanged="Pwd2_PasswordChanged"/>
                 <PasswordBox Width="300" Height="35" ToolTip="VisiblePasswordBox" Margin="30,0" x:Name="Pwd3"
                              Style="{StaticResource AddClearButtonWithVisiblePasswordBoxStyle}"
-                             pc:FrameworkElementBaseAttached.CornerRadius="20"/>
+                             pc:FrameworkElementBaseAttached.CornerRadius="10"/>
 
                 <Button Content="密码比对" Width="100" Height="34" 
                         pc:ButtonBaseAttached.IsShowRipple="True"
                         Click="Button1_Click"/>
 
-                <PasswordBox x:Name="tb" Width="300" Height="40" BorderThickness="1"
+                <TextBox x:Name="tb" Width="300" Height="40" BorderThickness="2"
                              pc:FrameworkElementBaseAttached.CornerRadius="10"
-                             Validation.ErrorTemplate="{StaticResource ValidationErrorBaseTemplate}"
-                             Validation.ValidationAdornerSite="{Binding RelativeSource={RelativeSource Self}}">
-                    <pc:PasswordBoxAssistant.Password>
-                        <Binding Path="PasswordContent" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
+                             Validation.ErrorTemplate="{StaticResource ValidationErrorBaseTemplate}">
+                    <TextBox.Text>
+                        <Binding Path="PasswordContent1" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
                             <Binding.ValidationRules>
-                                <pc:NotNullAndEmptyValidationRule ErrorMessage="密码不能为空" ValidatesOnTargetUpdated="True"/>
+                                <pc:RegularPatternValidationRule RegularPattern="Digital" ValidatesOnTargetUpdated="True"/>
+                            </Binding.ValidationRules>
+                        </Binding>
+                    </TextBox.Text>
+                </TextBox>
+                <PasswordBox Width="300" Height="40" BorderThickness="1" Margin="30,0"
+                             pc:FrameworkElementBaseAttached.CornerRadius="5"
+                             InputMethod.InputScope="Password" InputScope="Password"
+                             Validation.ErrorTemplate="{StaticResource ValidationErrorBaseTemplate}">
+                    <pc:PasswordBoxAssistant.Password>
+                        <Binding Path="PasswordContent2" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
+                            <Binding.ValidationRules>
+                                <pc:RegularPatternValidationRule RegularPattern="PhoneNumber" ValidatesOnTargetUpdated="True"/>
                             </Binding.ValidationRules>
                         </Binding>
                     </pc:PasswordBoxAssistant.Password>
                 </PasswordBox>
-                <Button Content="验证密码" Width="100" Height="34" Margin="30,0"
+                <Button Content="验证密码" Width="100" Height="34"
                         pc:ButtonBaseAttached.IsShowRipple="True"
                         Click="Button2_Click"/>
             </WrapPanel>
